
2007-04-03  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: control.h, gnome_warning.c, gnome_ui.c, 
		app_data.h, gnome_frame.c, gnome_options.c, 
		gnome_frame.h, gnome-xvidcap.glade:
		finish new frame change code by adding
		fading frame dimensions display
	* src: codecs.c, xtoffmpeg.c: indentation and such

2007-04-02  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: some cleanup of output pix
		format calculation
	* src/codecs.c: backport of const arrays to be
		compatible with gcc pre 4.1.x

2007-04-01  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: fix for jpeg and mjpeg quality
		issues as reported in bug # 1689959 and
		bug # 1584093. This completely changes
		encoding to use VBR with fixed qscale
		and qmin and qmax set to qscale
	* src/app_data.c: quality is much more effective
		now. Change default to 90.
	* src/gnome_ui.c: make frame selection through
		select button more consistent with dragging.
	* src/xtoffmpeg.c: fix for pgm encoding which was
		broken due to correct pix_fmt detection in
		libavcodec (broken vcodec_find_best_pix_fmt)
	
2007-03-29  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: codecs.c, gnome_warning.c, xtoffmpeg.c, 
		gnome_ui.c, capture.c, app_data.c, job.c, 
		app_data.h, gnome_frame.c, gnome_options.c, 
		gnome_frame.h, main.c, options.c, xtoxwd.c:
		initial support for dragging frame to resize,
		fix for bug # 1689984 and bug # 1689959,
		also code cleanup
	* src/colors.c, src/colors.h: indentation

2007-03-28  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: partial fix for bug # 1689959
	* src: colors.c, colors.h, xtoffmpeg.c, capture.c, 
		job.c, app_data.h, job.h: fix for 
		bug # 1689984

2007-03-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: capture.c, job.h, gnome_options.c, options.c:
		fix for bug # 1651517

2007-03-21  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* ffmpeg, ffmpeg-8195, ffmpeg-8133: updated ffmpeg to
		rev 8195 to fix bug # 1656899